--- a/React-project/package.json
+++ b/React-project/package.json
@@ -22,12 +22,15 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "antd": "^3.12.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
