--- a/React-project/package.json
+++ b/React-project/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "antd": "^3.12.3",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   }
 }
