--- a/React-project/package.json
+++ b/React-project/package.json
@@ -15,10 +15,12 @@
     "@babel/preset-env": "^7.2.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "style-loader": "^0.23.1",
@@ -33,6 +35,7 @@
     "antd": "^3.12.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-loadable": "^5.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   }
