--- a/React-project/package.json
+++ b/React-project/package.json
@@ -23,7 +23,9 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "react": "^16.7.0",
+    "react-color": "^2.17.0",
     "react-dom": "^16.7.0",
+    "redux": "^4.0.1",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
