--- a/React-project/.babelrc
+++ b/React-project/.babelrc
@@ -2,7 +2,8 @@
 {
     "presets": ["@babel/preset-env", "@babel/preset-react"],
     "plugins":[
-        "dynamic-import-webpack"
+        "dynamic-import-webpack",
+        "@babel/plugin-proposal-class-properties"
     ]
 
 }
